--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,25 @@
 language: python
 python:
-  - "2.6"
   - "2.7"
-  # does not have headers provided, please ask https://launchpad.net/~pypy/+archive/ppa
-  # maintainers to fix their pypy-dev package.
-  - "pypy"
-# command to install dependencies
+
 install:
-  - pip install .
-  - pip install -r requirements.txt
-# command to run tests
-script: nosetests
+  - "pip install -r requirements.txt"
+
+script:
+  - "python bot.py"
+
+after_success:
+  - "coveralls"
+  
+env:
+  - PYTHONPATH=.
+
+notifications:
+  irc:
+    channels:
+      - "irc.rizon.net#w24bot"
+    template:
+      - "%{repository}#%{build_number} (%{branch} - %{commit}) %{author}: %{message} - %{build_url}"
+  on_failure: always
+  on_success: change
+  skip_join: true
